# python-etcd3

./: Dockerfile  MANIFEST.in  _genproto.py  pyproject.toml
.github/workflows/: publish.yml
src/etcd3/: __init__.py  _version.py
